add class profile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <h2>HTML & CSS foundations</h2>
       <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </article>
-    <p class="name">Greg Hooper</p>
+    <div class="profile">
+      <img src="assets/images/image-avatar.webp" alt="">
+      <p class="name">Greg Hooper</p>
+    </div>
   </div>
 </body>
 </html>
